--- a/splitter/apps/userprofile/templates/userprofile/index.html
+++ b/splitter/apps/userprofile/templates/userprofile/index.html
@@ -3,7 +3,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class"col-md-6">
+		<div class"col-lg-4 col-md-6 col-xs-12">
 			<h5>{{ user.user.get_full_name }}</h5>
 			<h6>Available balance: {{ balance }}</h6>
 		</div>
@@ -48,7 +48,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<div class="table-responsive">
-					<table class="table table-striped">
+					<table class="table table-striped" id="groupTable">
 						<thead>
 							<tr>
 								<th>#</th>
@@ -81,10 +81,10 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				{% for trans in transaction_list %}
-				<div class="col-md-6">
+				<div class="col-lg-4 col-md-6 col-xs-8">
 					<div class="table-responsive">
 						<table class="table table-sm">
+							<h5>{{ user_a.user.get_full_name }}</h5>
 							<thead>
 								<tr>
 									<th>#</th>
@@ -92,7 +92,30 @@
 									<th>Amount</th>
 								</tr>
 							</thead>
-							{% for transaction in trans %}
+							{% for transaction in transaction_list_a %}
+							<tbody>
+								<th scope="row">{{ forloop.counter }}</th>
+								<td>{{ transaction.description }}</td>
+								<td>{{ transaction.amount }}</td>
+							</tbody>
+							{% endfor %}
+						</table>
+					</div>
+				<!-- </div> -->
+			</div>
+			<!-- <div class="row"> -->
+				<div class="col-lg-4 col-md-6 col-xs-8">
+					<div class="table-responsive">
+						<table class="table table-sm">
+							<h5>{{ user_b.user.get_full_name }}</h5>
+							<thead>
+								<tr>
+									<th>#</th>
+									<th>Description</th>
+									<th>Amount</th>
+								</tr>
+							</thead>
+							{% for transaction in transaction_list_b %}
 							<tbody>
 								<th scope="row">{{ forloop.counter }}</th>
 								<td>{{ transaction.description }}</td>
@@ -103,7 +126,6 @@
 					</div>
 				</div>
 			</div>
-				{% endfor %}
 		</div>
 		
 	</div>
